# oss-model-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: nersc-cpu-agent.slurm
src/oss_model_bench/: __init__.py  agent.py  agent_reports.py  cli.py  compare.py  config.py  endpoint.py  perf.py  summary.py  util.py
src/oss_model_bench/panels/: panel-v1.json
tests/: test_agent.py  test_compare.py  test_config.py  test_endpoint.py  test_perf.py  test_summary.py  test_util.py
